# OpenCV_Example

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
integral_matrix/: README.md  main.cpp
operations_on_matrices/: README.md  main.cpp
smooth_images/: README.md  main.cpp
